--- a/demo/index.html
+++ b/demo/index.html
@@ -4,8 +4,8 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0">
  <title>Housematch</title>
- <link rel="stylesheet" href="css/stylesheet.css">
- <link rel="stylesheet" href="css/reset.css">
+ <link rel="stylesheet" href=" https://marumi-web.github.io/demo01/css/stylesheet.css">
+ <link rel="stylesheet" href=" https://marumi-web.github.io/demo01/css/reset.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css">
 
 </head>
@@ -299,7 +299,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js"></script>
-<script src="js/test.js"></script>
+<script src=" https://marumi-web.github.io/demo01/js/test.js"></script>
 </body>
 </html>
 
